--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://kit.fontawesome.com/6d5c338c35.js" crossorigin="anonymous"></script>
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="lash extension, eyelash extension, lash lift, eyelash lift, lash lift and extension, lash extension and lift,lash extension NZ, eyelash extension NZ, lash lift NZ, eyelash lift NZ, lash lift and extension NZ, lash extension and lift NZ, lash extension Chch, eyelash extension Chch, lash lift CHch, eyelash lift Chch, lash lift and extension Chch, lash extension and lift Chch, Classic lash extension NZ, classic lash extension NZ, russian volume lash extension, russian volume lash extension NZ, russian volume lash extension Chch, volume lash extension, hybrid lash extension, hybrid lash extension NZ, hybrid lash extension Chch, lash infills, lash infill, lash infills NZ, lash infills Chch, lash infill NZ, lash infill Chch, lash tint NZ, lash tint Chch, volume lash extension, volume eyelash extension, volume lash extension NZ, volume eyelash extension NZ, volume lash extension Chch, volume eyelash extension Chch" content="HTML, CSS, JavaScript" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="author" content="Jolly L. Cusi" />
+    <title>Queens Lashes</title>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
